; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/freebsd/local/extr_16119.c_getline.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/freebsd/local/extr_16119.c_getline.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@in = common dso_local global i8* null, align 8
@.str = private unnamed_addr constant [5 x i8] c"recv\00", align 1
@stderr = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [5 x i8] c"<\09%s\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @getline(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i8*, i8** @in, align 8
  %4 = call i32 @memset(i8* %3, i8 signext 0, i32 8)
  %5 = load i32, i32* %2, align 4
  %6 = load i8*, i8** @in, align 8
  %7 = call i32 @recv(i32 %5, i8* %6, i32 8, i32 0)
  %8 = icmp slt i32 %7, 1
  br i1 %8, label %9, label %14

9:                                                ; preds = %1
  %10 = call i32 @perror(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  %11 = load i32, i32* %2, align 4
  %12 = call i32 @close(i32 %11)
  %13 = call i32 @exit(i32 1) #3
  unreachable

14:                                               ; preds = %1
  %15 = load i32, i32* @stderr, align 4
  %16 = load i8*, i8** @in, align 8
  %17 = call i32 @fprintf(i32 %15, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0), i8* %16)
  ret void
}

declare dso_local i32 @memset(i8*, i8 signext, i32) #1

declare dso_local i32 @recv(i32, i8*, i32, i32) #1

declare dso_local i32 @perror(i8*) #1

declare dso_local i32 @close(i32) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @fprintf(i32, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
